--- a/2438.html
+++ b/2438.html
@@ -164,18 +164,18 @@
             font-weight: 500;
             cursor: pointer;
             transition: all 0.2s ease;
-            background-color: #f1f5f9; /* Gray-100 */
-            color: #475569; /* Gray-700 */
+            background-color: #e0f2fe; /* Light Blue-100 */
+            color: #1e40af; /* Dark Blue-800 */
             text-align: center;
         }
         .time-button:hover:not(:disabled) {
-            background-color: #e2e8f0; /* Gray-200 */
-            border-color: #94a3b8; /* Gray-400 */
+            background-color: #bfdbfe; /* Blue-200 */
+            border-color: #60a5fa; /* Blue-400 */
         }
         .time-button.selected {
-            background-color: #3b82f6; /* Blue-500 */
+            background-color: #2563eb; /* Blue-600 */
             color: white;
-            border-color: #3b82f6;
+            border-color: #2563eb;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
         }
         .time-button:disabled {
@@ -253,6 +253,24 @@
             border-radius: 9999px; /* Fully rounded */
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
+
+        /* Vehicle Type Buttons Layout */
+        .vehicle-type-buttons-container {
+            display: flex;
+            flex-wrap: wrap; /* Allows wrapping on smaller screens */
+            justify-content: center; /* Center buttons horizontally */
+            gap: 1rem; /* Space between buttons */
+        }
+        @media (min-width: 640px) { /* On small screens and up */
+            .vehicle-type-buttons-container {
+                justify-content: space-evenly; /* Evenly distribute space */
+            }
+        }
+        @media (min-width: 768px) { /* On medium screens and up */
+            .vehicle-type-buttons-container {
+                justify-content: space-around; /* Spread out more */
+            }
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -282,7 +300,7 @@
             <!-- Step 1: Vehicle Type Selection -->
             <div id="vehicle-type-selection">
                 <h2 class="text-2xl font-bold text-gray-700 mb-6 text-center">1. Select Your Vehicle Type</h2>
-                <div class="flex flex-col sm:flex-row justify-center items-center space-y-4 sm:space-y-0 sm:space-x-4">
+                <div class="vehicle-type-buttons-container"> <!-- Added new container class -->
                     <button id="select-car-type" class="btn-primary">Car</button>
                     <button id="select-truck-type" class="btn-primary">Truck</button>
                     <button id="select-suv-type" class="btn-primary">SUV</button>
@@ -910,7 +928,6 @@
                 if (!container) return;
                 container.innerHTML = '';
                 const selectedDateObj = new Date(selectedDate + 'T00:00:00');
-                // Corrected date comparison by using YYYY-MM-DD string format
                 const todayFormatted = new Date().toISOString().split('T')[0];
                 const selectedDateFormatted = selectedDateObj.toISOString().split('T')[0];
                 const isToday = selectedDateFormatted === todayFormatted;
