--- a/2438.html
+++ b/2438.html
@@ -509,7 +509,41 @@
                     </div>
                     <div>
                         <label for="vehicle-make" class="block text-sm font-medium text-gray-700 mb-1">Vehicle Make</label>
-                        <input type="text" id="vehicle-make" placeholder="e.g., Honda" required>
+                        <select id="vehicle-make" required class="w-full px-3 py-2 border rounded-lg">
+                            <option value="">Select Make</option>
+                            <option value="Acura">Acura</option>
+                            <option value="Audi">Audi</option>
+                            <option value="BMW">BMW</option>
+                            <option value="Buick">Buick</option>
+                            <option value="Cadillac">Cadillac</option>
+                            <option value="Chevrolet">Chevrolet</option>
+                            <option value="Chrysler">Chrysler</option>
+                            <option value="Dodge">Dodge</option>
+                            <option value="Ford">Ford</option>
+                            <option value="GMC">GMC</option>
+                            <option value="Honda">Honda</option>
+                            <option value="Hyundai">Hyundai</option>
+                            <option value="Infiniti">Infiniti</option>
+                            <option value="Jaguar">Jaguar</option>
+                            <option value="Jeep">Jeep</option>
+                            <option value="Kia">Kia</option>
+                            <option value="Land Rover">Land Rover</option>
+                            <option value="Lexus">Lexus</option>
+                            <option value="Lincoln">Lincoln</option>
+                            <option value="Mazda">Mazda</option>
+                            <option value="Mercedes-Benz">Mercedes-Benz</option>
+                            <option value="Mini">Mini</option>
+                            <option value="Mitsubishi">Mitsubishi</option>
+                            <option value="Nissan">Nissan</option>
+                            <option value="Ram">Ram</option>
+                            <option value="Subaru">Subaru</option>
+                            <option value="Tesla">Tesla</option>
+                            <option value="Toyota">Toyota</option>
+                            <option value="Volkswagen">Volkswagen</option>
+                            <option value="Volvo">Volvo</option>
+                            <option value="Smart">Smart</option>
+                            <option value="Other">Other</option>
+                        </select>
                     </div>
                     <div>
                         <label for="vehicle-model" class="block text-sm font-medium text-gray-700 mb-1">Vehicle Model</label>
@@ -636,7 +670,7 @@
                 addressInput: document.getElementById('address-input'),
                 zipCodeInput: document.getElementById('zip-code'),
                 vehicleYearInput: document.getElementById('vehicle-year'),
-                vehicleMakeInput: document.getElementById('vehicle-make'),
+                vehicleMakeInput: document.getElementById('vehicle-make'), // Now a select element
                 vehicleModelInput: document.getElementById('vehicle-model'),
                 bookingDateInput: document.getElementById('booking-date'),
                 bookingTimeButtonsContainer: document.getElementById('booking-time-buttons'),
@@ -742,7 +776,8 @@
                 if (elements.addressInput) elements.addressInput.value = '';
                 if (elements.zipCodeInput) elements.zipCodeInput.value = '';
                 if (elements.vehicleYearInput) elements.vehicleYearInput.value = '';
-                if (elements.vehicleMakeInput) elements.vehicleMakeInput.value = '';
+                // Reset dropdown to default option
+                if (elements.vehicleMakeInput) elements.vehicleMakeInput.value = ''; 
                 if (elements.vehicleModelInput) elements.vehicleModelInput.value = '';
                 if (elements.createAccountCheckbox) elements.createAccountCheckbox.checked = false;
                 if (elements.passwordFields) elements.passwordFields.style.display = 'none';
